<resources>
    <string name="app_name">Civil Advocacy App</string>
    <string name="no_perm">Unable to detect Location</string>
    <string name="no_locs">Location Unavailable</string>
    <string name="networkErrorTitle">No Network Connection</string>
    <string name="networkErrorMsg1">Civic data can not be loaded without a Network Connection</string>
    <string name="networkErrorMsg2">You can not search without a Network Connection.</string>
    <string name="locationErrorTitle">Need Location Access</string>
    <string name="locationErrorMsg1">Unable to detect your current location, either refresh and give permission or try searching the location.</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="separator">separator</string>
    <string name="searchTitle">Region in United States</string>
    <string name="searchMsg">Enter a City, State or a ZIP Code</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="party_logo">Party Logo</string>
    <string name="title_activity_official">OfficialActivity</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="email">"Email: "</string>
    <string name="url">URL:</string>
    <string name="nullSearchStringMsg">Seems, you\'ve not entered anything!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">You Tube</string>
    <string name="gplus">Google Plus</string>
    <string name="copyright_info">\u00a9 2022, Rushikesh Kadam</string>
    <string name="version">Version 1.0</string>
    <string name="data_provided_by">Data Provided By</string>
    <string name="google">Google</string>
    <string name="cia">Google Civic Information API</string>
    <string name="no_location_error">Unable to find the location.\n Please try searching a region within United States</string>
    <string name="senator_image_here">Senator Image Here</string>
</resources>
