<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.CivilAdvocacyApp.AboutActivity">

    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/version"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/copyright_info"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/data_provided_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:gravity="center_horizontal"
        android:text="@string/data_provided_by"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyright" />

    <TextView
        android:id="@+id/google_reference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_provided_by"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/cia"
        android:textSize="38sp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/version"
        android:textSize="12sp" />

</RelativeLayout>