<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.CivilAdvocacyApp.OfficialActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/location_bg"
        android:elevation="4dp"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Chicago, IL, 60616" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        tools:context="com.example.CivilAdvocacyApp.OfficialActivity"
        tools:layout_editor_absoluteY="-38dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailsCard"
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:elevation="4dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo">

                <TextView
                    android:id="@+id/phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Phone:"
                    android:textColor="@color/app_bg"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/addrress_text"
                    app:layout_constraintTop_toTopOf="@+id/addrress_text"
                    tools:text="400 E 33rd St Apt 1603, Chicago, 60616," />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="302dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/phone_text"
                    app:layout_constraintStart_toEndOf="@+id/phone_text"
                    app:layout_constraintTop_toTopOf="@+id/phone_text"
                    tools:text="+1-3127742719" />

                <TextView
                    android:id="@+id/addrress_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address:"
                    android:textColor="@color/app_bg"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Email:"
                    android:textColor="@color/app_bg"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/email_text"
                    app:layout_constraintStart_toEndOf="@+id/email_text"
                    app:layout_constraintTop_toTopOf="@+id/email_text"
                    tools:text="ckhandhar@hawk.iit.edu" />

                <TextView
                    android:id="@+id/website_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Website:"
                    android:textColor="@color/app_bg"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/website_text"
                    app:layout_constraintStart_toEndOf="@+id/website_text"
                    app:layout_constraintTop_toTopOf="@+id/website_text"
                    tools:text="https:www.github.com/chiragkhandhar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="160dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="U.S. Senator" />

            <TextView
                android:id="@+id/name"
                android:layout_width="160dp"
                android:layout_height="46dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/profile_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Chirag Khandhar" />

            <TextView
                android:id="@+id/party"
                android:layout_width="160dp"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/title"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="(Democratic Party)" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="11dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="350dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6019152" />

            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="170dp"
                android:layout_height="212dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:background="@drawable/dp_background"
                android:clickable="true"
                android:contentDescription="@string/profile_picture"
                android:cropToPadding="true"
                android:elevation="4dp"
                android:onClick="expandImage"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.919"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_dp" />

            <ImageView
                android:id="@+id/partyLogo"
                android:layout_width="71dp"
                android:layout_height="65dp"
                android:contentDescription="@string/party_logo"
                android:elevation="6dp"
                android:onClick="partyLogoClicked"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
                app:layout_constraintEnd_toEndOf="@+id/profile_photo"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/profile_photo" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5294118" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="155dp" />

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/social_bg"
                android:clickable="true"
                android:contentDescription="@string/youtube"
                android:onClick="youTubeClicked"
                android:padding="5dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/party"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="@+id/party"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/youtube"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="132dp"
                android:background="@drawable/social_bg"
                android:clickable="true"
                android:contentDescription="@string/facebook"
                android:onClick="clickOnFacebook"
                android:padding="2dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/party"
                app:layout_constraintStart_toStartOf="@+id/party"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/facebook"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_marginStart="132dp"
                android:layout_marginTop="32dp"
                android:onClick="clickOnTwitter"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/party"
                app:layout_constraintStart_toStartOf="@+id/party"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/twitter"
                tools:ignore="SpeakableTextPresentCheck"
                tools:visibility="visible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>